feat: add hierarchical tags
